--- a/index.html
+++ b/index.html
@@ -8,7 +8,46 @@
 
 <body>
 
+<div class="header">
 
+    <div class="header-top"></div>
+
+    <div class="header-bottom">
+        <div class="hb-text"></div>
+        <div class="hb-img"><img src="" alt="some image"></div>
+    </div>
+
+</div>
+
+<div class="info">
+
+    <div class="info-text"></div> <!-- Div necessary? Text-align in .info? -->
+
+    <div class="info-elements">
+        <div class="element"> <!-- Contains Square and text below --> </div>
+        <div class="element"> <!-- Contains Square and text below --> </div>
+        <div class="element"> <!-- Contains Square and text below --> </div>
+        <div class="element"> <!-- Contains Square and text below --> </div>
+    </div>
+
+</div>
+
+<div class="quote">
+    <div class="quote-text"></div>
+    <div class="quote-source"></div> <!-- Div necessary? Text-align in .quote? -->
+
+</div>
+
+<div class="actioncall">
+    
+    <div class="call-box">
+        <div class="call-text"></div>
+        <button class="call-button">Sign up</button>
+    </div>
+
+</div>
+
+<div class="footer"></div>
 
 </body>
 </html>
