--- a/index.html
+++ b/index.html
@@ -10,11 +10,25 @@
 
 <div class="header">
 
-    <div class="header-top"></div>
+    <div class="header-top">
+        Header Logo
+        <ul>
+            <li>Link 1</li> <!-- Turn into links -->
+            <li>Link 2</li>
+            <li>Link 3</li>
+        </ul>
+    </div>
 
     <div class="header-bottom">
-        <div class="hb-text"></div>
-        <div class="hb-img"><img src="" alt="some image"></div>
+        <div class="hb-text">
+            <div>This Website is awesome</div>
+            <p style="max-width: 500px;">This website has some subtext
+                that goes here under the main title.
+                It's a smaller font and the color is lower contrast
+            </p>
+            <button>Sign up</button>
+        </div>    
+        <div class="hb-img"><img src="./img/placeholder.png" alt="some image"></div>
     </div>
 
 </div>
@@ -42,12 +56,14 @@
     
     <div class="call-box">
         <div class="call-text"></div>
-        <button class="call-button">Sign up</button>
+      <!-- Commented out <button class="call-button">Sign up</button> -->
     </div>
 
 </div>
 
-<div class="footer"></div>
+<div class="footer"> <!-- Push to bottom with flex, needs 100vh in body -->
+
+</div>
 
 </body>
 </html>
