--- a/index.html
+++ b/index.html
@@ -35,28 +35,34 @@
 
 <div class="info">
 
-    <div class="info-text"></div> <!-- Div necessary? Text-align in .info? -->
+    <div class="info-header">Some random information.</div>
 
     <div class="info-elements">
-        <div class="element"> <!-- Contains Square and text below --> </div>
-        <div class="element"> <!-- Contains Square and text below --> </div>
-        <div class="element"> <!-- Contains Square and text below --> </div>
-        <div class="element"> <!-- Contains Square and text below --> </div>
+        <div class="element"><div></div>this is some subtext unter an illustration or image</div>
+        <div class="element"><div></div>this is some subtext unter an illustration or image</div>
+        <div class="element"><div></div>this is some subtext unter an illustration or image</div>
+        <div class="element"><div></div>this is some subtext unter an illustration or image</div>
     </div>
 
 </div>
 
 <div class="quote">
-    <div class="quote-text"></div>
-    <div class="quote-source"></div> <!-- Div necessary? Text-align in .quote? -->
+    <div class="quote-text">This is an inspiring quote, or a testimonial from a customer.
+        Maybe it's just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that it looks nice.
+    </div>
+    <div class="quote-origin">- Thor, God of Thunder</div>
 
 </div>
 
 <div class="actioncall">
     
     <div class="call-box">
-        <div class="call-text"></div>
-      <!-- Commented out <button class="call-button">Sign up</button> -->
+        <div class="call-text">
+            <div style="font-weight: bold;">Call to action! It's time!</div>
+            <div>Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="call-button">Sign up</button>
     </div>
 
 </div>
