Add footer and finishing touches

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
     <div class="header-bottom">
         <div class="hb-text">
-            <div>This Website is awesome</div>
-            <p style="max-width: 500px;">This website has some subtext
+            <div class="hb-main">This Website is awesome</div>
+            <div class="hb-secondary">This website has some subtext
                 that goes here under the main title.
                 It's a smaller font and the color is lower contrast
-            </p>
+            </div>
             <button>Sign up</button>
         </div>    
         <div class="hb-img"><img src="./img/placeholder.png" alt="some image"></div>
@@ -67,8 +67,8 @@
 
 </div>
 
-<div class="footer"> <!-- Push to bottom with flex, needs 100vh in body -->
-
+<div class="footer">
+    Copyright &copy; The Odin Project 2021
 </div>
 
 </body>
